# dllm-plugin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PR-2-local-review.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  optional-vllm-smoke.yml
docs/: CONTRACTS.md  DESIGN_MVP.md  MOCK_STACK_MODEL.md  ROADMAP.md  TOOLING.md
scripts/: add-signoff.sh
tests/: __init__.py  conftest.py  test_config.py  test_llada2_default.py  test_package.py  test_remask_forward_handoff.py  test_remasking_base.py
vllm_dllm_plugin/: __init__.py  config.py
vllm_dllm_plugin/models/: __init__.py  mock_llada2.py
vllm_dllm_plugin/remasking/: __init__.py  base.py  handoff.py  llada2_default.py
